--- a/Motor2D/Motor2D.vcxproj.filters
+++ b/Motor2D/Motor2D.vcxproj.filters
@@ -49,7 +49,12 @@
     <ClCompile Include="j1Gui.cpp">
       <Filter>Desenvolupament  ========\Modules</Filter>
     </ClCompile>
-    <ClCompile Include="UI_Element.cpp" />
+    <ClCompile Include="UI_Element.cpp">
+      <Filter>Desenvolupament  ========\Modules\UI_Element</Filter>
+    </ClCompile>
+    <ClCompile Include="UI_Sprite.cpp">
+      <Filter>Desenvolupament  ========\Modules\UI_Element</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1Window.h">
@@ -118,7 +123,12 @@
     <ClInclude Include="j1Gui.h">
       <Filter>Desenvolupament  ========\Modules</Filter>
     </ClInclude>
-    <ClInclude Include="UI_Element.h" />
+    <ClInclude Include="UI_Element.h">
+      <Filter>Desenvolupament  ========\Modules\UI_Element</Filter>
+    </ClInclude>
+    <ClInclude Include="UI_Sprite.h">
+      <Filter>Desenvolupament  ========\Modules\UI_Element</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Programacio 2 ===========">
@@ -138,6 +148,9 @@
     </Filter>
     <Filter Include="Desenvolupament  ========\Tools\PuguiXML">
       <UniqueIdentifier>{7cb78d67-17cc-45eb-af97-e2106becce7b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Desenvolupament  ========\Modules\UI_Element">
+      <UniqueIdentifier>{f4f686f4-3112-45a1-bce1-53c271eccff1}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
