--- a/Motor2D/Motor2D.vcxproj.filters
+++ b/Motor2D/Motor2D.vcxproj.filters
@@ -50,10 +50,10 @@
       <Filter>Desenvolupament  ========\Modules</Filter>
     </ClCompile>
     <ClCompile Include="UI_Element.cpp">
-      <Filter>Desenvolupament  ========\Modules\UI_Element</Filter>
+      <Filter>Desenvolupament  ========\Modules\UI_Elements</Filter>
     </ClCompile>
     <ClCompile Include="UI_Sprite.cpp">
-      <Filter>Desenvolupament  ========\Modules\UI_Element</Filter>
+      <Filter>Desenvolupament  ========\Modules\UI_Elements</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -124,10 +124,10 @@
       <Filter>Desenvolupament  ========\Modules</Filter>
     </ClInclude>
     <ClInclude Include="UI_Element.h">
-      <Filter>Desenvolupament  ========\Modules\UI_Element</Filter>
+      <Filter>Desenvolupament  ========\Modules\UI_Elements</Filter>
     </ClInclude>
     <ClInclude Include="UI_Sprite.h">
-      <Filter>Desenvolupament  ========\Modules\UI_Element</Filter>
+      <Filter>Desenvolupament  ========\Modules\UI_Elements</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -149,7 +149,7 @@
     <Filter Include="Desenvolupament  ========\Tools\PuguiXML">
       <UniqueIdentifier>{7cb78d67-17cc-45eb-af97-e2106becce7b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Desenvolupament  ========\Modules\UI_Element">
+    <Filter Include="Desenvolupament  ========\Modules\UI_Elements">
       <UniqueIdentifier>{f4f686f4-3112-45a1-bce1-53c271eccff1}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
